--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   readmore: ^3.0.0
   flutter_svg_provider: ^1.0.7
+  fl_chart: ^0.69.0
   
 
 dev_dependencies:
